// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All props are passed 1`] = `
<td>
  <input
    className="box"
    name="1,1"
    onChange={[Function]}
    style={
      Object {
        "backgroundColor": "#90CAF9",
      }
    }
    value="1"
  />
</td>
`;

exports[`No value is passed 1`] = `
<td>
  <input
    className="box"
    name="undefined,undefined"
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  />
</td>
`;
